<resources>
    <string name="app_name">PAM App</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="ourappname_description">Physical Activity Monitoring</string>
    <string name="username">Username</string>
    <string name="registerButton">Register user</string>
    <string name="logout">Logout</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="stepsLabel">Todays steps:</string>
    <string name="appbaner">PAM</string>
    <string name="delete">DELETE</string>
    <string name="back_to_login">Back to login</string>
    <string name="edit_data">Edit data</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="previous">PREVIOUS</string>
    <string name="next">NEXT</string>
    <string name="save">SAVE</string>
    <string name="place">Place</string>
    <string name="workout_place">Workout Place</string>
    <string name="create">CREATE</string>
    <string name="workout_name">Workout Name</string>
    <string name="date">Date</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="name">Name</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="account">Account:</string>
    <string name="profile">Profile</string>
    <string name="add_workout">Add Workout</string>
    <string name="show_workouts">Show Workouts</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="unsubscribe">UNSUBSCRIBE</string>
    <string name="subscribed">SUBSCRIBED</string>
    <string name="unsubscribed">UNSUBSCRIBED</string>
    <string name="nazwa">Name:</string>
    <string name="miejsce">Place:</string>
    <string name="data">Date</string>
    <string name="od">From</string>
    <string name="until">To</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data_found">No data found</string>
    <string name="no_data_info">No data</string>
    <string name="show_stats">Show stats</string>
    <string name="user_list">User List</string>
    <string name="all_workouts_number">All workouts number</string>
    <string name="all_workouts_time_hours_minutes">All workouts time (minutes)</string>
    <string name="stats">Stats</string>
    <string name="max_workout_time_hours_minutes">Longest workout time (minutes)</string>
    <string name="last_workout_date">Last workout date</string>
    <string name="first_workout_date">First workout date</string>
    <string name="your_stats">Your stats</string>
    <string name="sleep">Sleep</string>
    <string name="show_pulse">Pulse</string>
    <string name="shortest_sleep_minutes">Shortest sleep</string>
    <string name="longest_sleep_minutes">Longest sleep</string>
    <string name="average_sleep_minutes">Average sleep</string>
    <string name="max_pulse">Max pulse</string>
    <string name="min_pulse">Min pulse</string>
    <string name="average_pulse">Average pulse</string>
</resources>