<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home" android:title="@string/home" android:icon="@drawable/home_icon"/>
        <item android:id="@+id/nav_search" android:title="@string/search" android:icon="@drawable/search_icon"/>
    </group>
    <group android:checkableBehavior="single">
        <item   android:title="@string/account">
            <menu>
                <item android:id="@+id/nav_profile" android:title="@string/profile" android:icon="@drawable/ic_profile"/>
                <item android:id="@+id/nav_user_list" android:title="@string/user_list" android:icon="@drawable/ic_users_icon"/>
                <item android:id="@+id/nav_add_workout" android:title="@string/add_workout" android:icon="@drawable/ic_add_workout"/>
                <item android:id="@+id/nav_show_workouts" android:title="@string/show_workouts" android:icon="@drawable/ic_workout_list"/>
                <item android:id="@+id/nav_show_stats" android:title="@string/show_stats" android:icon="@drawable/ic_stats"/>
                <item android:id="@+id/nav_show_sleep" android:title="@string/sleep" android:icon="@drawable/ic_stats"/>
                <item android:id="@+id/nav_show_pulse" android:title="@string/show_pulse" android:icon="@drawable/ic_stats"/>
                <item android:id="@+id/nav_logout"  android:title="@string/logout" android:icon="@drawable/logout_icon"/>
            </menu>
        </item>

    </group>
</menu>