<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".workouts.ShowStatsActivity"
    tools:layout_editor_absoluteX="29dp"
    tools:layout_editor_absoluteY="0dp">

    <TextView
        android:id="@+id/all_workouts_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_workouts_number"
        app:layout_constraintBottom_toTopOf="@+id/first_workout_label"
        app:layout_constraintEnd_toStartOf="@+id/all_workouts"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/all_workouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="@string/no_data_info"
        app:layout_constraintBottom_toTopOf="@+id/first_workout"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/max_workout_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="336dp"
        android:text="@string/no_data_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats"
        app:layout_constraintBottom_toTopOf="@+id/all_workouts_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785" />

    <TextView
        android:id="@+id/max_workout_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="336dp"
        android:text="@string/max_workout_time_hours_minutes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/max_workout_time" />

    <TextView
        android:id="@+id/first_workout_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_workout_date"
        app:layout_constraintBottom_toTopOf="@+id/last_workout_label"
        app:layout_constraintEnd_toStartOf="@+id/first_workout"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/last_workout_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/last_workout_date"
        app:layout_constraintBottom_toTopOf="@+id/max_workout_time_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/first_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:text="@string/no_data_info"
        app:layout_constraintBottom_toTopOf="@+id/last_workout"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/last_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:text="@string/no_data_info"
        app:layout_constraintBottom_toTopOf="@+id/max_workout_time"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>