<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pulse.ShowPulseStatsActivity"
    tools:layout_editor_absoluteX="29dp"
    tools:layout_editor_absoluteY="0dp">

    <TextView
        android:id="@+id/max_pulse_label"
        android:layout_width="160dp"
        android:textStyle="bold"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:text="@string/max_pulse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats" />

    <TextView
        android:id="@+id/max_pulse"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:text="@string/no_data_info"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toEndOf="@+id/max_pulse_label"
        app:layout_constraintTop_toBottomOf="@+id/stats" />

    <TextView
        android:id="@+id/stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/stats"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/min_pulse_label"
        android:layout_width="160dp"
        android:textStyle="bold"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/min_pulse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/max_pulse_label" />

    <TextView
        android:id="@+id/average_pulse_label"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:textStyle="bold"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/average_pulse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/min_pulse_label" />

    <TextView
        android:id="@+id/min_pulse"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/no_data_info"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintStart_toEndOf="@+id/min_pulse_label"
        app:layout_constraintTop_toBottomOf="@+id/max_pulse" />

    <TextView
        android:id="@+id/average_pulse"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/no_data_info"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintStart_toEndOf="@+id/average_pulse_label"
        app:layout_constraintTop_toBottomOf="@+id/min_pulse" />

</androidx.constraintlayout.widget.ConstraintLayout>