<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sleep.SleepActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".sleep.AddSleepActivity">

        <TextView
            android:id="@+id/startSleepTime"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:text="@string/start_time"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/startSleepTimeInput"
            app:layout_constraintHorizontal_bias="0.645"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sleepDate" />

        <TextView
            android:id="@+id/endSleepTime"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:text="@string/end_time"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/endSleepTimeInput"
            app:layout_constraintHorizontal_bias="0.553"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startSleepTime" />

        <TextView
            android:id="@+id/sleepDate"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical"
            android:text="@string/date"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/sleepDateInput"
            app:layout_constraintHorizontal_bias="0.328"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TimePicker
            android:id="@+id/startSleepTimeInput"
            android:layout_width="240dp"
            android:layout_height="140dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:timePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sleepDateInput" />

        <DatePicker
            android:id="@+id/sleepDateInput"
            android:layout_width="240dp"
            android:layout_height="140dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TimePicker
            android:id="@+id/endSleepTimeInput"
            android:layout_width="240dp"
            android:layout_height="140dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:timePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startSleepTimeInput" />

        <Button
            android:id="@+id/addSleepButton"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginTop="60dp"
            android:text="@string/create"
            android:textColor="#ffffff"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endSleepTimeInput" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>